Time: 1 ms (95.48%), Space: 44.2 MB (86.53%) - LeetHub